samples/_failures_safe/1760959691_a9e2b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6593ded.c: In function ‘parser_parse_statement’:
./samples/SAFE/__tmp_d6593ded.c:163:5: error: expected declaration or statement at end of input
  163 |     if (token.type == TOKEN_IDENTIFIER) {
      |     ^~
./samples/SAFE/__tmp_d6593ded.c:163:5: error: expected declaration or statement at end of input
